--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/CoreAppWithDocker/v15
+/CoreAppWithDocker/bin/Debug/netcoreapp2.0
